[package]
name = "foo"
version = "0.1.0"
edition = "2024"

[dependencies]
ws = { package = "rocket_ws", version = "0.1.1" }
async-openai = "0.29.0"
base64 = "0.22.1"
dotenv = "0.15.0"
futures = "0.3.31"
env_logger = "0.11.8"
log = "0.4.27"
rocket = {version="0.5.1", features = ["json"]}
sqlx = { version = "0.8.6", features = ["runtime-async-std", "tls-rustls-ring-webpki", "postgres", "uuid"] }
aws-config = { version= "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.106.0"
[dependencies.uuid]
version = "1.17.0"
features = [
	"v4"
]
